<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/nav_header"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/nav_home"
            android:checked="true"/>
        <item
            android:id="@+id/nav_all"
            android:icon="@drawable/book_open_variant"
            android:title="@string/nav_all"/>
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/star"
            android:title="@string/nav_favorite"/>
        <item
            android:id="@+id/nav_random"
            android:icon="@drawable/dices"
            android:title="@string/nav_random"/>
    </group>
    <group
        android:id="@+id/nav_footer"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/nav_settings"
            android:checkable="false"/>
        <item
            android:id="@+id/nav_open_source"
            android:icon="@drawable/github_circle"
            android:title="@string/nav_open_source"
            android:checkable="false"/>
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/exit_to_app"
            android:title="@string/nav_exit"
            android:checkable="false"/>
    </group>
</menu>