<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="15dp"
            app:cardUseCompatPadding="true">

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical">

                <ImageView android:layout_width="match_parent"
                           android:layout_height="match_parent"
                           app:srcCompat="@drawable/splash_cook"/>

                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="horizontal"
                              android:weightSum="1">

                    <Button android:layout_width="0dp"
                            android:id="@+id/button_card_one_first"
                            android:layout_height="60dp"
                            android:textStyle="italic"
                            android:layout_weight="0.5"
                            android:background="@drawable/button_home_selector"
                            android:text="@string/app_name"/>

                    <Button android:layout_width="0dp"
                            android:layout_height="60dp"
                            android:id="@+id/button_card_one_two"
                            android:textStyle="italic"
                            android:layout_weight="0.5"
                            android:background="@drawable/button_home_selector"
                            android:text="@string/nav_favorite"/>

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:weightSum="1">

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="260dp"
                android:layout_weight="0.5"
                app:cardCornerRadius="5dp"
                app:cardElevation="15dp"
                app:cardUseCompatPadding="true">

                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="vertical">

                    <ImageView android:layout_width="match_parent"
                               android:layout_height="160dp"
                               app:srcCompat="@drawable/splash_cook"/>

                    <LinearLayout android:layout_width="match_parent"
                                  android:layout_height="wrap_content">

                        <Button android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:textStyle="italic"
                                android:id="@+id/button_card_two"
                                android:background="@drawable/button_home_selector"
                                android:text="@string/nav_random"/>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="260dp"
                android:layout_weight="0.5"
                app:cardCornerRadius="5dp"
                app:cardElevation="15dp"
                app:cardUseCompatPadding="true">

                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="match_parent"
                              android:orientation="vertical">


                    <ImageView android:layout_width="match_parent"
                               android:layout_height="160dp"
                               app:srcCompat="@drawable/splash_cook"/>


                    <LinearLayout android:layout_width="match_parent"
                                  android:layout_height="wrap_content">

                        <Button android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:textStyle="italic"
                                android:id="@+id/button_card_three"
                                android:background="@drawable/button_home_selector"
                                android:text="@string/nav_settings"/>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="15dp"
            app:cardUseCompatPadding="true">

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical">

                <ImageView android:layout_width="match_parent"
                           android:layout_height="match_parent"
                           app:srcCompat="@drawable/splash_cook"/>

                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="horizontal"
                              android:weightSum="1">

                    <Button android:layout_width="0dp"
                            android:layout_height="60dp"
                            android:layout_weight="0.5"
                            android:id="@+id/button_card_four_first"
                            android:textStyle="italic"
                            android:background="@drawable/button_home_selector"
                            android:text="@string/add_recipe"/>

                    <Button android:layout_width="0dp"
                            android:layout_height="60dp"
                            android:layout_weight="0.5"
                            android:id="@+id/button_card_four_two"
                            android:textStyle="italic"
                            android:background="@drawable/button_home_selector"
                            android:text="@string/search_recipe"/>

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>

</ScrollView>